# Boids

./: .gitignore  CMakeLists.txt  README.md
include/: boid.hpp  raster_window.hpp  swarm_application.hpp  utils.hpp  world.hpp
src/: CMakeLists.txt  boid.cpp  boid.hpp  main.cpp  raster_window.cpp  raster_window.hpp  swarm_application.hpp  utils.cpp  utils.hpp  world.cpp
